--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "intl-messageformat": "1.3.0",
     "jsonpath": "0.2.4",
     "knex": "0.10.0",
+    "later": "^1.2.0",
     "lodash": "4.13.1",
     "moment": "2.13.0",
     "moment-timezone": "0.5.4",
